--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
     npm install
     npm run build
   displayName: 'Build'
-  workingDirectory: '$(Build.SourcesDirectory)/src'
+  workingDirectory: '$(Build.SourcesDirectory)/ai-code-review'
 
 - script: |
     npx tfx-cli extension create
